--- a/index.html
+++ b/index.html
@@ -1,111 +1,144 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ultimate DJ Studio (Base64)</title>
+<style>
+body{margin:0;background:#111;color:#eee;font-family:sans-serif;}
+#app{display:flex;flex-direction:column;align-items:center;padding:20px;}
+.panel{background:#222;border-radius:12px;padding:20px;margin:10px;width:95%;max-width:1400px;display:flex;flex-wrap:wrap;justify-content:center;}
+.knob-container{display:flex;flex-direction:column;align-items:center;margin:10px;}
+.knob{width:60px;height:60px;border-radius:50%;background:#333;border:4px solid #555;display:flex;align-items:center;justify-content:center;cursor:pointer;position:relative;}
+.knob:after{content:'';position:absolute;width:4px;height:20px;background:#eee;top:10px;left:50%;transform:translateX(-50%) rotate(0deg);transform-origin:bottom center;transition: transform 0.1s;border-radius:2px;}
+.label{margin-top:8px;font-size:14px;}
+.pad{width:60px;height:60px;background:#444;margin:5px;border-radius:8px;display:flex;align-items:center;justify-content:center;cursor:pointer;user-select:none;}
+.pad.active{background:#ff5722;}
+#sequencer{display:flex;flex-wrap:wrap;justify-content:center;margin-top:10px;}
+.step{width:30px;height:30px;margin:2px;border-radius:4px;background:#333;cursor:pointer;display:flex;align-items:center;justify-content:center;}
+.step.active{background:#ff5722;}
+#visualizer{width:100%;height:160px;background:#111;margin-top:20px;border:1px solid #333;border-radius:8px;}
+button{background:#333;border:none;color:#eee;padding:8px 12px;border-radius:6px;margin:4px;cursor:pointer;}
+button:hover{background:#555;}
+#recordBtn{background:#e53935;}
+#downloadBtn{background:#43a047;}
+</style>
+</head>
+<body>
+<div id="app">
+<h1>Ultimate DJ Studio (Base64)</h1>
+
+<div class="panel" id="controlsPanel">
+  <div class="knob-container"><div class="knob" id="masterPitchKnob"></div><div class="label">Master Pitch</div></div>
+  <div class="knob-container"><div class="knob" id="masterVolumeKnob"></div><div class="label">Master Volume</div></div>
+</div>
+
+<div class="panel" id="padPanel"></div>
+<div class="panel" id="sequencer"></div>
+<canvas id="visualizer"></canvas>
+</div>
+
 <script>
-// Advanced FX Rack
-function createFXRack(track){
-  const filter = ctx.createBiquadFilter();
-  filter.type = 'lowpass';
-  filter.frequency.value = 20000;
-  
-  const delay = ctx.createDelay(); delay.delayTime.value = 0.25;
-  const reverb = ctx.createConvolver();
-  const distortion = ctx.createWaveShaper();
-  distortion.curve = new Float32Array([0,1]);
-  const gain = ctx.createGain(); gain.gain.value=0.8;
-  
-  filter.connect(delay); delay.connect(reverb); reverb.connect(distortion); distortion.connect(gain); gain.connect(masterGain);
-  
-  return {filter, delay, reverb, distortion, gain};
-}
+// Audio Context
+const ctx = new (window.AudioContext || window.webkitAudioContext)();
+const masterGain = ctx.createGain(); masterGain.gain.value=0.8; masterGain.connect(ctx.destination);
+let masterPlaybackRate = 1;
 
-// Apply FX per track
-const trackFX = {};
-trackNames.forEach(track=>{ trackFX[track] = createFXRack(track); });
-
-// Randomization Engine
-function randomizeTrack(track,intensity=0.3){
-  sequencerData[track].forEach((_,i)=>{
-    sequencerData[track][i] = Math.random() < intensity;
-  });
-  // Update UI
-  document.querySelectorAll(`.step[data-track="${track}"]`).forEach(step=>{
-    const i = parseInt(step.dataset.step);
-    step.classList.toggle('active', sequencerData[track][i]);
+// Knob Utility
+function createKnob(el, callback){
+  let isDragging=false, angle=0;
+  el.addEventListener('mousedown',()=>{isDragging=true;});
+  window.addEventListener('mouseup',()=>{isDragging=false;});
+  window.addEventListener('mousemove',(e)=>{
+    if(!isDragging) return;
+    let rect=el.getBoundingClientRect();
+    let y=e.clientY-rect.top-rect.height/2;
+    let x=e.clientX-rect.left-rect.width/2;
+    let a=Math.atan2(y,x)*180/Math.PI;
+    angle=Math.min(135,Math.max(-135,a));
+    el.querySelector(':after').style.transform=`translateX(-50%) rotate(${angle}deg)`;
+    callback((angle+135)/270);
   });
 }
+createKnob(document.getElementById('masterPitchKnob'), v=>{ masterPlaybackRate = 0.5+v*1.5; });
+createKnob(document.getElementById('masterVolumeKnob'), v=>{ masterGain.gain.value=v; });
 
-// Randomize all tracks with intensity map
-function randomizeAll(intensityMap){
-  trackNames.forEach(track=>{
-    randomizeTrack(track, intensityMap[track] || 0.3);
-  });
-}
-
-// Preloaded DJ Presets
-const djPresets={
-  Fisher:[['Kick',0,4,8,12],['Snare',4,12],['HiHat',2,6,10,14],['Synth',0,3,6,9,12,15]],
-  DomDolla:[['Kick',0,4,8,12],['Clap',4,12],['HiHat',1,5,9,13],['Synth',0,2,4,6,8,10,12,14]],
-  BarryCantSwim:[['Kick',0,4,8,12],['Piano',0,4,8,12],['HiHat',2,6,10,14],['Trumpet',1,5,9,13]]
+// Base64-embedded samples (Section 1)
+const base64Samples={
+  Kick:'data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+  Snare:'data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+  HiHat:'data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA='
 };
+const sampleBuffers={};
+async function loadBase64Samples(){
+  for(const [name,base64] of Object.entries(base64Samples)){
+    const res=await fetch(base64);
+    const arrayBuffer=await res.arrayBuffer();
+    sampleBuffers[name]=await ctx.decodeAudioData(arrayBuffer);
+  }
+}
+loadBase64Samples();
 
-function loadDJPreset(name){
-  if(!djPresets[name]) return;
-  trackNames.forEach(track=>sequencerData[track]=new Array(16).fill(false));
-  djPresets[name].forEach(p=>{
-    const [track,...steps]=p;
-    steps.forEach(s=>sequencerData[track][s]=true);
-  });
-  // Update UI
-  document.querySelectorAll('.step').forEach(step=>{
-    const t=step.dataset.track, i=parseInt(step.dataset.step);
-    step.classList.toggle('active',sequencerData[t][i]);
-  });
+// Play sample
+function playSample(name){
+  if(!sampleBuffers[name]) return;
+  const source=ctx.createBufferSource();
+  source.buffer=sampleBuffers[name];
+  source.playbackRate.value=masterPlaybackRate;
+  const gainNode=ctx.createGain(); gainNode.gain.value=0.8;
+  source.connect(gainNode); gainNode.connect(masterGain);
+  source.start();
 }
 
-// FX Controls UI
+// Pads
+const padPanel=document.getElementById('padPanel');
+const pads=['Kick','Snare','HiHat'];
+pads.forEach(name=>{
+  const pad=document.createElement('div'); pad.className='pad'; pad.textContent=name;
+  pad.onclick=()=>{ playSample(name); };
+  padPanel.appendChild(pad);
+});
+
+// Sequencer
+const sequencer=document.getElementById('sequencer');
+const trackNames=['Kick','Snare','HiHat'];
+let sequencerData={};
 trackNames.forEach(track=>{
-  const container = document.createElement('div'); container.className='knob-container';
-  const knob = document.createElement('div'); knob.className='knob';
-  const label = document.createElement('div'); label.className='label'; label.textContent=track+' Filter';
-  container.appendChild(knob); container.appendChild(label);
-  document.getElementById('controlsPanel').appendChild(container);
-  createKnob(knob,v=>{ trackFX[track].filter.frequency.value = 200 + v*20000; });
+  sequencerData[track]=new Array(16).fill(false);
+  for(let i=0;i<16;i++){
+    const step=document.createElement('div');
+    step.className='step'; step.dataset.track=track; step.dataset.step=i;
+    step.onclick=()=>{
+      sequencerData[track][i]=!sequencerData[track][i];
+      step.classList.toggle('active',sequencerData[track][i]);
+    };
+    sequencer.appendChild(step);
+  }
 });
 
-// Sequencer Step Highlight Animation
-function highlightStep(stepIndex){
-  document.querySelectorAll('.step').forEach(step=>{
-    step.style.borderColor='';
-    if(parseInt(step.dataset.step)===stepIndex){
-      step.style.borderColor='#ff5722';
-    }
-  });
+// Visualizer
+const canvas=document.getElementById('visualizer');
+const ctxVis=canvas.getContext('2d');
+canvas.width=canvas.clientWidth; canvas.height=canvas.clientHeight;
+const analyser=ctx.createAnalyser();
+masterGain.connect(analyser);
+const dataArray=new Uint8Array(analyser.frequencyBinCount);
+function drawVisualizer(){
+  requestAnimationFrame(drawVisualizer);
+  analyser.getByteFrequencyData(dataArray);
+  ctxVis.fillStyle='#111'; ctxVis.fillRect(0,0,canvas.width,canvas.height);
+  let barWidth=canvas.width/dataArray.length, x=0;
+  for(let i=0;i<dataArray.length;i++){
+    let barHeight=dataArray[i]/2;
+    ctxVis.fillStyle=`rgb(${barHeight+50},50,200)`;
+    ctxVis.fillRect(x,canvas.height-barHeight,barWidth,barHeight);
+    x+=barWidth+1;
+  }
 }
-
-// Updated Sequencer Playback Loop
-let stepCounter=0;
-function sequencerLoop(){
-  trackNames.forEach(track=>{
-    if(sequencerData[track][stepCounter]){
-      playSample(track);
-    }
-  });
-  highlightStep(stepCounter);
-  stepCounter = (stepCounter + 1) % 16;
-  setTimeout(sequencerLoop,(60000/bpm)/4);
-}
-sequencerLoop();
-
-// Preset Buttons UI
-['JohnSummit','BenBohmer','Kygo','Fisher','DomDolla','BarryCantSwim'].forEach(name=>{
-  const btn = document.createElement('button'); btn.textContent=name;
-  btn.onclick=()=>{ loadPreset(name); loadDJPreset(name); };
-  document.getElementById('controlsPanel').appendChild(btn);
-});
-
-// Optional Fullscreen toggle
-const fsBtn = document.createElement('button'); fsBtn.textContent='Fullscreen';
-fsBtn.onclick=()=>{ document.documentElement.requestFullscreen(); };
-document.getElementById('controlsPanel').appendChild(fsBtn);
+drawVisualizer();
 </script>
+</body>
+</html>
 <script>
 // Base64-embedded samples (Section 2)
 const base64Samples2={
