--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ button:hover{background:#555;}
 <div class="panel" id="sequencer"></div>
 <canvas id="visualizer"></canvas>
 <script>
-// Audio Context and Master Controls
+// -----------------------------
+// Audio Context & Master Controls
+// -----------------------------
 let ctx, masterGain, masterPlaybackRate=1, audioStarted=false;
 const startBtn=document.getElementById('startAudioBtn');
 
@@ -48,7 +50,6 @@ startBtn.onclick=async ()=>{
     ctx=new (window.AudioContext||window.webkitAudioContext)();
     masterGain=ctx.createGain(); masterGain.gain.value=0.8; masterGain.connect(ctx.destination);
     audioStarted=true; startBtn.textContent='Audio Playing';
-    // Initialize FX rack and pads after audio context is running
     initPads();
     initSequencer();
     initFX();
@@ -58,45 +59,26 @@ startBtn.onclick=async ()=>{
   }
 };
 
-// Utility for Knob / Slider (auto-switch to slider for touch)
-function createControl(el, callback){
-  if('ontouchstart' in window){
-    // Touch devices use vertical slider
-    let startY, startVal=0;
-    el.addEventListener('touchstart',e=>{ startY=e.touches[0].clientY; });
-    el.addEventListener('touchmove',e=>{
-      e.preventDefault();
-      const delta=startY - e.touches[0].clientY;
-      let value=Math.min(1,Math.max(0,startVal + delta/100));
-      callback(value);
-    });
-    el.addEventListener('touchend',()=>{ startVal=callback.value||0; });
-  } else {
-    // Desktop knob rotation
-    let isDragging=false, angle=0;
-    el.addEventListener('mousedown',()=>{isDragging=true;});
-    window.addEventListener('mouseup',()=>{isDragging=false;});
-    window.addEventListener('mousemove',(e)=>{
-      if(!isDragging) return;
-      const rect=el.getBoundingClientRect();
-      const y=e.clientY-rect.top-rect.height/2;
-      const x=e.clientX-rect.left-rect.width/2;
-      angle=Math.min(135,Math.max(-135,Math.atan2(y,x)*180/Math.PI));
-      el.querySelector(':after').style.transform=`translateX(-50%) rotate(${angle}deg)`;
-      callback((angle+135)/270);
-    });
-  }
-}
-
-// Pads setup
+// -----------------------------
+// Pads & Samples
+// -----------------------------
 const padPanel=document.getElementById('padPanel');
 const padNames=['Kick','Snare','HiHat','Clap','Piano','Trumpet','Synth'];
 const sampleBuffers={};
+const base64Samples={
+'Kick':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'Snare':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'HiHat':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'Clap':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'Piano':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'Trumpet':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
+'Synth':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA='
+};
+
 async function loadSamples(){
-  for(const name of padNames){
-    // Minimal placeholder samples; replace with full Base64 later
-    const response=await fetch('data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=');
-    const arrayBuffer=await response.arrayBuffer();
+  for(const name in base64Samples){
+    const res=await fetch('data:audio/wav;base64,'+base64Samples[name]);
+    const arrayBuffer=await res.arrayBuffer();
     sampleBuffers[name]=await ctx.decodeAudioData(arrayBuffer);
   }
 }
@@ -117,10 +99,13 @@ function initPads(){
     });
   });
 }
-
-// Sequencer setup
+<script>
+// -----------------------------
+// Sequencer Setup
+// -----------------------------
 const sequencer=document.getElementById('sequencer');
 let sequencerData={};
+
 function initSequencer(){
   padNames.forEach(track=>{
     sequencerData[track]=new Array(16).fill(false);
@@ -132,7 +117,87 @@ function initSequencer(){
   });
 }
 
-// FX Rack per track
+// -----------------------------
+// DJ Presets (16-step patterns per track)
+// -----------------------------
+const presets={
+'John Summit':{
+  'Kick':[1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0],
+  'Snare':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'HiHat':[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],
+  'Clap':[0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  'Piano':[0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,0],
+  'Trumpet':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'Synth':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0]
+},
+'Fisher':{
+  'Kick':[1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0],
+  'Snare':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'HiHat':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0],
+  'Clap':[0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  'Piano':[0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1],
+  'Trumpet':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'Synth':[1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1]
+},
+'Dom Dolla':{
+  'Kick':[1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0],
+  'Snare':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'HiHat':[1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1],
+  'Clap':[0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  'Piano':[0,0,1,0,1,0,1,0,0,0,1,0,1,0,1,0],
+  'Trumpet':[0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0],
+  'Synth':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0]
+},
+'Ben Böhmer':{
+  'Kick':[1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0],
+  'Snare':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'HiHat':[0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1],
+  'Clap':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'Piano':[1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1],
+  'Trumpet':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'Synth':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0]
+},
+'Barry Can’t Swim':{
+  'Kick':[1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0],
+  'Snare':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'HiHat':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0],
+  'Clap':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'Piano':[0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1],
+  'Trumpet':[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+  'Synth':[1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1]
+},
+'Zhu':{
+  'Kick':[1,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0],
+  'Snare':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'HiHat':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0],
+  'Clap':[0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1],
+  'Piano':[1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0],
+  'Trumpet':[0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0],
+  'Synth':[1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1]
+}
+};
+
+// Apply Preset Function
+function applyPreset(name){
+  const data=presets[name];
+  if(!data) return;
+  padNames.forEach(track=>sequencerData[track]=[...data[track]]);
+  document.querySelectorAll('.step').forEach(step=>{
+    const track=step.dataset.track; const i=parseInt(step.dataset.step);
+    step.classList.toggle('active',sequencerData[track][i]);
+  });
+}
+
+// Create Preset Buttons
+Object.keys(presets).forEach(name=>{
+  const btn=document.createElement('button'); btn.textContent=name;
+  btn.onclick=()=>applyPreset(name);
+  document.getElementById('controlsPanel').appendChild(btn);
+});
+
+// -----------------------------
+// FX Rack
+// -----------------------------
 const trackFX={};
 function initFX(){
   padNames.forEach(track=>{
@@ -142,7 +207,7 @@ function initFX(){
     filter.connect(delay); delay.connect(gain); gain.connect(masterGain);
     trackFX[track]={filter,delay,gain};
   });
-  // Example Master Controls
+  // Master Controls
   const masterPitchKnob=document.createElement('div'); masterPitchKnob.className='knob';
   const masterPitchLabel=document.createElement('div'); masterPitchLabel.className='label'; masterPitchLabel.textContent='Master Pitch';
   const masterVolKnob=document.createElement('div'); masterVolKnob.className='knob';
@@ -153,7 +218,9 @@ function initFX(){
   createControl(masterVolKnob,v=>{ masterGain.gain.value=v; });
 }
 
-// Sequencer playback loop
+// -----------------------------
+// Sequencer Loop
+// -----------------------------
 let stepCounter=0;
 const bpm=120;
 function highlightStep(stepIndex){
@@ -167,10 +234,25 @@ function sequencerLoop(){
   setTimeout(sequencerLoop,(60000/bpm)/4);
 }
 sequencerLoop();
-</script>
-<script>
+
 // -----------------------------
-// Voice Recorder
+// Randomization Engine
+// -----------------------------
+function randomizeSequence(intensity=0.3){
+  padNames.forEach(track=>{
+    sequencerData[track]=sequencerData[track].map(()=>Math.random()<intensity);
+  });
+  document.querySelectorAll('.step').forEach(step=>{
+    const track=step.dataset.track; const i=parseInt(step.dataset.step);
+    step.classList.toggle('active',sequencerData[track][i]);
+  });
+}
+const randBtn=document.createElement('button'); randBtn.textContent='Randomize Sequence';
+randBtn.onclick=()=>randomizeSequence(0.3);
+document.getElementById('controlsPanel').appendChild(randBtn);
+
+// -----------------------------
+// Voice Recorder + Download
 // -----------------------------
 let recorder, recordedChunks=[], recording=false;
 const recBtn=document.createElement('button'); recBtn.textContent='Record Voice';
@@ -197,104 +279,99 @@ downloadBtn.onclick=()=>{
   const a=document.createElement('a'); a.href=url; a.download='voice_recording.webm'; a.click();
   URL.revokeObjectURL(url);
 };
+</script>
+<script>
+// -----------------------------
+// Visualizer Setup
+// -----------------------------
+function initVisualizer(){
+  const canvas=document.getElementById('visualizer');
+  const ctxVis=canvas.getContext('2d');
+  canvas.width=canvas.clientWidth; canvas.height=canvas.clientHeight;
+  const analyser=ctx.createAnalyser();
+  masterGain.connect(analyser);
+  analyser.fftSize=256;
+  const bufferLength=analyser.frequencyBinCount;
+  const dataArray=new Uint8Array(bufferLength);
 
-// -----------------------------
-// Randomization Engine
-// -----------------------------
-function randomizeSequence(){
-  padNames.forEach(track=>{
-    sequencerData[track]=sequencerData[track].map(()=>Math.random()<0.3);
-  });
-  // Update UI
-  document.querySelectorAll('.step').forEach(step=>{
-    const track=step.dataset.track; const i=parseInt(step.dataset.step);
-    step.classList.toggle('active',sequencerData[track][i]);
-  });
+  function drawVisualizer(){
+    requestAnimationFrame(drawVisualizer);
+    analyser.getByteFrequencyData(dataArray);
+    ctxVis.fillStyle='#111'; ctxVis.fillRect(0,0,canvas.width,canvas.height);
+    const barWidth=canvas.width/bufferLength;
+    for(let i=0;i<bufferLength;i++){
+      const barHeight=dataArray[i]/2;
+      ctxVis.fillStyle=`rgb(${barHeight+50},50,${255-barHeight})`;
+      ctxVis.fillRect(i*barWidth,canvas.height-barHeight,barWidth,barHeight);
+    }
+  }
+  drawVisualizer();
 }
 
-const randBtn=document.createElement('button'); randBtn.textContent='Randomize Sequence';
-document.getElementById('controlsPanel').appendChild(randBtn);
-randBtn.onclick=randomizeSequence;
-
 // -----------------------------
-// Presets
+// Vertical Sliders for Touch
 // -----------------------------
-const presets={
-  'John Summit':[/*16-step boolean arrays per track*/],
-  'Fisher':[/*16-step boolean arrays per track*/],
-  'Dom Dolla':[/*...*/],
-  'Ben Böhmer':[/*...*/],
-  'Kygo':[/*...*/],
-  'Barry Can’t Swim':[/*...*/]
-};
+function createControl(el,callback){
+  let value=0.5;
+  function updateKnob(v){
+    value=v;
+    el.querySelector('span')?.remove();
+    const angle=-135+v*270;
+    el.style.setProperty('--angle',angle+'deg');
+    callback(value);
+  }
 
-function applyPreset(name){
-  const data=presets[name];
-  if(!data) return;
-  padNames.forEach((track,i)=>{
-    sequencerData[track]=data[i] || new Array(16).fill(false);
-  });
-  document.querySelectorAll('.step').forEach(step=>{
-    const track=step.dataset.track; const i=parseInt(step.dataset.step);
-    step.classList.toggle('active',sequencerData[track][i]);
-  });
+  let isDragging=false;
+  function getValueFromEvent(e){
+    const rect=el.getBoundingClientRect();
+    const y=(e.touches?e.touches[0].clientY:e.clientY)-rect.top;
+    let v=1-y/rect.height; if(v<0)v=0;if(v>1)v=1;
+    updateKnob(v);
+  }
+
+  el.onmousedown=()=>{ isDragging=true; };
+  el.onmousemove=e=>{ if(isDragging)getValueFromEvent(e); };
+  el.onmouseup=()=>{ isDragging=false; };
+  el.ontouchstart=e=>{ getValueFromEvent(e); e.preventDefault(); };
+  el.ontouchmove=e=>{ getValueFromEvent(e); e.preventDefault(); };
+  el.ontouchend=()=>{ isDragging=false; };
+
+  // Initial
+  updateKnob(value);
 }
 
-Object.keys(presets).forEach(name=>{
-  const btn=document.createElement('button'); btn.textContent=name;
-  btn.onclick=()=>applyPreset(name);
-  document.getElementById('controlsPanel').appendChild(btn);
+// -----------------------------
+// Add Vertical Sliders for FX
+// -----------------------------
+Object.keys(trackFX).forEach(track=>{
+  const container=document.getElementById('controlsPanel');
+  ['filter','delay','gain'].forEach(param=>{
+    const slider=document.createElement('div'); slider.className='slider';
+    const label=document.createElement('div'); label.className='label'; label.textContent=`${track} ${param}`;
+    container.appendChild(slider); container.appendChild(label);
+    createControl(slider,v=>{
+      if(param==='filter') trackFX[track].filter.frequency.value=500+v*15000;
+      if(param==='delay') trackFX[track].delay.delayTime.value=v*0.5;
+      if(param==='gain') trackFX[track].gain.gain.value=v;
+    });
+  });
 });
 
 // -----------------------------
-// Visualizer
+// Extra Finishing Touches
 // -----------------------------
-const canvas=document.getElementById('visualizer');
-const ctxVis=canvas.getContext('2d');
-canvas.width=canvas.clientWidth; canvas.height=canvas.clientHeight;
-const analyser=ctx.createAnalyser();
-masterGain.connect(analyser);
-analyser.fftSize=256;
-const bufferLength=analyser.frequencyBinCount;
-const dataArray=new Uint8Array(bufferLength);
-
-function drawVisualizer(){
-  requestAnimationFrame(drawVisualizer);
-  analyser.getByteFrequencyData(dataArray);
-  ctxVis.fillStyle='#111'; ctxVis.fillRect(0,0,canvas.width,canvas.height);
-  const barWidth=canvas.width/bufferLength;
-  for(let i=0;i<bufferLength;i++){
-    const barHeight=dataArray[i]/2;
-    ctxVis.fillStyle=`rgb(${barHeight+50},50,${255-barHeight})`;
-    ctxVis.fillRect(i*barWidth,canvas.height-barHeight,barWidth,barHeight);
-  }
+function finishAesthetic(){
+  document.querySelectorAll('.knob, .slider').forEach(el=>{
+    el.style.background='linear-gradient(145deg,#222,#111)';
+    el.style.border='4px solid #555';
+    el.style.boxShadow='2px 2px 5px #000 inset,-2px -2px 5px #555 inset';
+  });
+  document.querySelectorAll('.pad').forEach(el=>{
+    el.style.borderRadius='8px';
+    el.style.boxShadow='2px 2px 5px #000 inset,-2px -2px 5px #555 inset';
+  });
 }
-drawVisualizer();
-
-// -----------------------------
-// Placeholder Base64 Sample Pack
-// Replace these with real samples in production
-// -----------------------------
-const base64Samples={
-  'Kick':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'Snare':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'HiHat':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'Clap':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'Piano':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'Trumpet':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA=',
-  'Synth':'UklGRiQAAABXQVZFZm10IBAAAAABAAEAQB8AAIA+AAACABAAZGF0YQAAAAA='
-};
-
-// Load real Base64 samples
-async function loadFullSamples(){
-  for(const name in base64Samples){
-    const data=base64Samples[name];
-    const res=await fetch('data:audio/wav;base64,'+data);
-    const arrayBuffer=await res.arrayBuffer();
-    sampleBuffers[name]=await ctx.decodeAudioData(arrayBuffer);
-  }
-}
-loadFullSamples();
+finishAesthetic();
 </script>
 </body>
-</html>
+</html>  
